--- a/package.json
+++ b/package.json
@@ -1,41 +1,52 @@
 {
-  "name": "party-radio-engine",
+  "name": "test001",
   "version": "1.0.0",
-  "description": "Online Realtime Media Music Video Aggregator Radio Flux Manager",
+  "description": "",
+  "repository": {},
   "main": "app.js",
-  "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "directories": {
+    "test": "test"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/clemeno/party-radio-engine.git"
+  "scripts": {
+    "pretest": "standard",
+    "test": "tap test/**/*.test.js",
+    "start": "fastify start -p 43210 -s 43211 -a :: -o -T 10000 --body-limit 1073741824 app.js",
+    "predev": "standard --fix",
+    "dev": "fastify start -p 43210 -s 43211 -a :: -o -T 10000 --body-limit 1073741824 -P -w app.js"
   },
   "keywords": [
-    "Online",
-    "Realtime",
-    "Media",
-    "Music",
-    "Video",
-    "Aggregator",
-    "Radio",
-    "Flux",
-    "Manager"
+    "to generate PDFs : puppeteer: ~3.0.2 // Puppeteer currently does not work on Node v14 due to an upstream bug. Please see: https://github.com/puppeteer/puppeteer/issues/5719 for details. "
   ],
-  "author": "CLEm",
-  "license": "GPL-3.0",
-  "bugs": {
-    "url": "https://github.com/clemeno/party-radio-engine/issues"
-  },
-  "homepage": "https://github.com/clemeno/party-radio-engine#readme",
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "fastify": "^3.1.1",
-    "fastify-cli": "^2.0.2",
-    "fastify-static": "^3.1.0",
-    "moment-timezone": "^0.5.31"
+    "JSONStream": "~1.3.5",
+    "bcrypt": "~5.0.0",
+    "event-stream": "~4.0.1",
+    "fastify": "~3.1.1",
+    "fastify-autoload": "~3.0.5",
+    "fastify-cli": "~2.0.2",
+    "fastify-compress": "~3.2.1",
+    "fastify-cors": "~4.1.0",
+    "fastify-env": "~2.0.1",
+    "fastify-helmet": "~4.0.2",
+    "fastify-jwt": "~2.1.2",
+    "fastify-objectionjs": "~0.2.2",
+    "fastify-plugin": "~2.0.1",
+    "fastify-routes": "~3.0.1",
+    "fastify-sensible": "~3.0.1",
+    "fastify-static": "~3.2.0",
+    "highcharts": "~8.1.2",
+    "make-promises-safe": "~5.1.0",
+    "moment-timezone": "~0.5.31",
+    "mysql": "~2.18.1",
+    "mysql2": "~2.1.0",
+    "pino-pretty": "~4.1.0",
+    "tap-stream": "~0.2.0",
+    "uuid": "~8.2.0"
   },
   "devDependencies": {
-    "standard": "^14.3.4",
-    "tap": "^14.10.7"
+    "standard": "~14.3.4",
+    "tap": "~14.10.7"
   }
 }
