--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mysql": "~2.18.1",
     "mysql2": "~2.1.0",
     "pino-pretty": "~4.1.0",
+    "socket.io": "~2.3.0",
     "tap-stream": "~0.2.0",
     "uuid": "~8.2.0"
   },
