--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "bcrypt": "~5.0.0",
     "event-stream": "~4.0.1",
     "fastify": "~3.1.1",
-    "fastify-autoload": "~3.0.5",
+    "fastify-autoload": "~3.0.6",
     "fastify-cli": "~2.0.2",
     "fastify-compress": "~3.2.2",
     "fastify-cors": "~4.1.0",
@@ -32,7 +32,7 @@
     "fastify-helmet": "~4.0.2",
     "fastify-jwt": "~2.1.2",
     "fastify-objectionjs": "~0.2.2",
-    "fastify-plugin": "~2.0.1",
+    "fastify-plugin": "~2.0.3",
     "fastify-routes": "~3.0.1",
     "fastify-sensible": "~3.0.1",
     "fastify-static": "~3.2.0",
@@ -41,10 +41,11 @@
     "moment-timezone": "~0.5.31",
     "mysql": "~2.18.1",
     "mysql2": "~2.1.0",
+    "sqlite3": "~5.0.0",
     "pino-pretty": "~4.1.0",
     "socket.io": "~2.3.0",
     "tap-stream": "~0.2.0",
-    "uuid": "~8.2.0"
+    "uuid": "~8.3.0"
   },
   "devDependencies": {
     "standard": "~14.3.4",
