--- a/package.json
+++ b/package.json
@@ -23,29 +23,31 @@
     "JSONStream": "~1.3.5",
     "bcrypt": "~5.0.0",
     "event-stream": "~4.0.1",
-    "fastify": "~3.2.1",
+    "fastify": "~3.3.0",
     "fastify-autoload": "~3.0.8",
     "fastify-cli": "~2.2.0",
     "fastify-compress": "~3.3.0",
     "fastify-cors": "~4.1.0",
     "fastify-env": "~2.0.1",
-    "fastify-helmet": "~5.0.0",
-    "fastify-jwt": "~1.5.0",
+    "fastify-helmet": "~5.0.1",
+    "fastify-jwt": "~2.1.3",
     "fastify-objectionjs": "~0.2.2",
-    "fastify-plugin": "~2.3.0",
+    "fastify-plugin": "~2.3.3",
     "fastify-routes": "~3.0.1",
     "fastify-sensible": "~3.0.1",
     "fastify-static": "~3.2.0",
-    "highcharts": "~8.1.2",
+    "highcharts": "~8.2.0",
     "make-promises-safe": "~5.1.0",
     "moment-timezone": "~0.5.31",
     "mysql": "~2.18.1",
     "mysql2": "~2.1.0",
-    "sqlite3": "~5.0.0",
-    "pino-pretty": "~4.1.0",
+    "pino-pretty": "~4.2.0",
     "socket.io": "~2.3.0",
+    "socket.io-client": "2.3.0",
+    "sqlite3": "~5.0.0",
     "tap-stream": "~0.2.0",
-    "uuid": "~8.3.0"
+    "uuid": "~8.3.0",
+    "vue-material": "1.0.0-beta-15"
   },
   "devDependencies": {
     "standard": "~14.3.4",
